@@ -1,5 +1,5 @@
 /*jshint globalstrict:false, strict:false, maxlen: 500 */
-/*global assertTrue, assertEqual, arango, print */
+/*global db, assertTrue, assertEqual, arango, print */
 
 // //////////////////////////////////////////////////////////////////////////////
 // / DISCLAIMER
@@ -29,6 +29,7 @@ const internal = require('internal');
 const fs = require('fs');
 const IM = global.instanceManager;
 const ct = require('@arangodb/testutils/client-tools');
+const a = require("@arangodb/analyzers");
 
 const wordListForRoute = [
   "/_db", "/_admin", "/_api", "/_system", "/_cursor", "/version", "/status",
@@ -82,7 +83,35 @@ const wordListForKeys = [
   "Via",
   "Warning",
   "Www-authenticate",
-  "random"
+  "random",
+  "x-arango-allow-dirty-read",
+  "x-arango-aql-document-aql",
+  "x-arango-async",
+  "x-arango-async-id",
+  "x-arango-dump-auth-user",
+  "x-arango-dump-block-counts",
+  "x-arango-dump-id",
+  "x-arango-dump-shard-id",
+  "x-arango-endpoint",
+  "x-arango-error-codes",
+  "x-arango-errors",
+  "x-arango-errors, x-arango-async-id",
+  "x-arango-fast-path",
+  "x-arango-frontend",
+  "x-arango-hlc",
+  "x-arango-lz4",
+  "x-arango-potential-dirty-read",
+  "x-arango-queue-time-seconds",
+  "x-arango-replication-active",
+  "x-arango-replication-checkmore",
+  "x-arango-replication-frompresent",
+  "x-arango-replication-lastincluded",
+  "x-arango-replication-lastscanned",
+  "x-arango-replication-lasttick",
+  "x-arango-request-forwarded-to",
+  "x-arango-source",
+  "x-arango-trx-body",
+  "x-arango-trx-id"
 ];
 
 const messages = [
@@ -94,6 +123,27 @@ const messages = [
 /// @brief Http Request Fuzzer suite
 ////////////////////////////////////////////////////////////////////////////////
 function httpRequestsFuzzerTestSuite() {
+  function gatherResources () {
+    db._databases().forEach (database => {
+      db._useDatabase(database);
+      db._collections().forEach(col => {
+        wordListForRoute.push(`_db/${database}/_api/collection/${col.name()}`);
+        col.indexes().forEach(idx => {
+          wordListForRoute.push(`_db/${database}/_api/index/${encodeURIComponent(idx.id)}1`);
+        });
+      });
+      db._analyzers.toArray().forEach(an => {
+        wordListForRoute.push(`_db/${database}/_api/analyzer/${an.name}`);
+      });
+      db._views().forEach(view => {
+        wordListForRoute.push(`_db/${database}/_api/view/${view.name()}`);
+        wordListForRoute.push(`_db/${database}/_api/view/${view.name()}/properties`);
+      });
+      
+    });
+    print(wordListForRoute);
+    db._useDatabase("_system");
+  };
   return {
     setUpAll: function () {
       let moreargv = [];
@@ -105,8 +155,9 @@ function httpRequestsFuzzerTestSuite() {
       }
 
       IM.rememberConnection();
+      gatherResources();
     },
-    tearDown: function () {
+    tearDownAll: function () {
       let moreargv = [];
       let logFile = fs.join(fs.getTempPath(), `rta_out_clean.log`);
       let rc = ct.run.rtaMakedata(IM.options, IM, 2, messages[1], logFile, moreargv);
@@ -114,7 +165,9 @@ function httpRequestsFuzzerTestSuite() {
         let rx = new RegExp(/\\n/g);
         print("http_fuzz: failed to clear testdatas:\n" + fs.read(logFile).replace(rx, '\n'));
       }
+    },
 
+    tearDown: function () {
       IM.gatherNetstat();
       IM.printNetstat();
     },
