@@ -1,6 +1,9 @@
 devel
 -----
 
+* Fix BTS-2178: If the URL in an HTTP request is bad, the server will
+  now not simply close the connection but give a proper response.
+
 * Fix unique _key generation in two cases: AQL INSERT operations in a loop
   without user specified _key in collections with exactly one shard or with
   multiple shard, non-standard sharding and `forceOneShardAttributeValue`.
